# quantum-nexus

./: .clauderules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Quantum_Nexus_Blueprint.md  README.md  backtest.py  main.py  optimize.py  pyproject.toml  setup_supabase.py  stress_test.py
.github/workflows/: ci.yml
agents/: executor_node.py  orchestrator_node.py  risk_auditor_node.py
backtesting/: backtester.py  data_loader.py  optimizer.py
claude_ecosystem/: hft_async_skill.md  telegram_alert_skill.md  zero_trust_skill.md
core/: cortex_ai.py  domain.py  the_aegis.py  the_omnibus.py
execution/: binance_rest.py  binance_ws.py  executor_node.py  oracle.py
infrastructure/: Dockerfile  docker-compose.yml  supabase_audit_logs.sql
telemetry/: command_center.py  observer.py  supabase_sink.py  telegram_alerts.py
tests/: test_backtesting.py  test_binance_rest.py  test_binance_ws.py  test_command_center.py  test_core.py  test_integration.py  test_supabase_sink.py  test_telegram.py
