[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "agents*", "execution*", "telemetry*"]

[project]
name = "quantum-nexus"
version = "9.0.0"
description = "Quantum Nexus v9 — Institutional algorithmic trading ecosystem"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "websockets>=13.0",
    "pydantic>=2.9",
    "uvloop>=0.20; sys_platform != 'win32'",
    "psutil>=6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.11", "pre-commit>=3.8", "pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
